Replaces URIResourceHandle with URLResourceHandle